<resources>
    <string name="app_name">Meetings</string>
    <string name="tab_meeting_title">My meetings</string>
    <string name="activity_new_meeting">New meeting</string>
    <string name="meeting_room">salle de Réunion</string>
    <string name="filtrer_par_salle">Filtrer par salle</string>
    <string name="filtrer_par_date">Filtrer par date</string>
    <string name="reset">Reset</string>
    <string name="date_de_reunion">date de réunion</string>
    <string name="date_meeting">%1$s-%2$s-%3$s</string>
    <string name="mozart">Mozart</string>
    <string name="beethoven">Beethoven</string>
    <string name="vivaldi">Vivaldi</string>
    <string name="bach">Bach</string>
    <string name="chopin">Chopin</string>
    <string-array name="rooms">
        <item>Mozart</item>
        <item>Beethoven</item>
        <item>Vivaldi</item>
        <item>Bach</item>
        <item>Chopin</item>
    </string-array>
</resources>
