<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.meeting_list.ListMeetingActivity"
   >

   <item
        android:id="@+id/sortbydate"
        android:title="@string/filtrer_par_date"
        app:showAsAction="never"/>
    <item
        android:id="@+id/sortbyroom"
        android:title="@string/filtrer_par_salle"
        app:showAsAction="never">
        <menu>

            <item
            android:id="@+id/item_mozart"
            android:title="@string/mozart" />

            <item
            android:id="@+id/item_beethoven"
            android:title="@string/beethoven" />

            <item
                android:id="@+id/item_vivaldi"
                android:title="@string/vivaldi" />

            <item
                android:id="@+id/item_bach"
                android:title="@string/bach" />

            <item
                android:id="@+id/item_chopin"
                android:title="@string/chopin" />


        </menu>
    </item>

    <item
        android:id="@+id/reset"
        android:title="@string/reset"
        app:showAsAction="never"/>
</menu>

